whitespace fixes

--- a/styles/components/page-components/_clients.scss
+++ b/styles/components/page-components/_clients.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: 1fr;
   gap: 12px;
+  padding-bottom: 24px;
   @include breakpoint(md) {
     padding-bottom: 48px;
     grid-template-columns: 1fr 1fr;
